--- a/test3.html
+++ b/test3.html
@@ -6,6 +6,8 @@
 	<title>Photography</title>
 </head>
 <body>
+	<script src="test3.js"></script>
+
 	<div class=top>
 		<h1>ZINEB FAIDI</h1>
 		<h2>Welcome to my image gallery</h2>
@@ -13,13 +15,12 @@
 	<div class=bottom>
 
 		<h3>Do you like these pictures ?</h3>
-		<img src=https://images.unsplash.com/photo-1531033707823-1a4c80d266e4?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=993eb821ddf2ac001fae28dabd2ccf77&auto=format&fit=crop&w=634&q=80>
+		<img id="image" onclick="changeimg()" src=https://images.unsplash.com/photo-1531033707823-1a4c80d266e4?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=993eb821ddf2ac001fae28dabd2ccf77&auto=format&fit=crop&w=634&q=80>
 		<img src="https://images.unsplash.com/photo-1500245804862-0692ee1bbee8?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=2bb853af4b15a7f368d6eef571c4800d&auto=format&fit=crop&w=634&q=80">
 		<img src="https://images.unsplash.com/photo-1502739391963-eda719c24cd4?ixlib=rb-0.3.5&s=4f0e6f76360cf29f51cecf91d892c339&auto=format&fit=crop&w=634&q=80">
 		<img src="https://images.unsplash.com/photo-1511449923494-cf6b1028e9d7?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=3e134a3dfaf22894196a7e6624a62e02&auto=format&fit=crop&w=634&q=80">
 		<img src="https://images.unsplash.com/photo-1509650840259-72cd4b94cc3b?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=5d5ea3f1c80689bcf8eba568eb5ec21d&auto=format&fit=crop&w=634&q=80">
 		<img height=500px src="https://images.unsplash.com/photo-1462121594302-c1ed6b9ab32d?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=7bdc71fe2ea24f71da27c32416df387e&auto=format&fit=crop&w=700&q=80">
 	</div>
-
 </body>
 </html>
